# hydra

./: .gitignore  Cargo.toml  HYDRA_SDK_DESIGN_RULES.md  V2_OPERATOR_RUNBOOK.md
crates/hydra-api/: Cargo.toml
crates/hydra-api/src/: auth.rs  lib.rs  responses.rs  routes.rs  security.rs  server.rs  state.rs  transport.rs
crates/hydra-bench/: Cargo.toml
crates/hydra-bench/benches/: engine.rs  storage.rs
crates/hydra-bench/src/: lib.rs
crates/hydra-cli/: Cargo.toml
crates/hydra-cli/src/: main.rs
crates/hydra-cli/tests/: compact.rs  inspect.rs  snapshot.rs  verify.rs  verify_recoverability.rs
crates/hydra-core/: Cargo.toml
crates/hydra-core/src/: action.rs  automation.rs  causal_cell.rs  commit.rs  correlation.rs  edge.rs  epistemic.rs  error.rs  event.rs  graph.rs  id.rs  identity.rs  lib.rs  micromodel.rs  node.rs  policy.rs  replication.rs  schema.rs  sensor.rs  snapshot.rs  subscription.rs  trust.rs
crates/hydra-engine/: Cargo.toml
crates/hydra-engine/src/: action_store.rs  anomaly.rs  cascade.rs  causal_cell_store.rs  commit_ledger.rs  counterfactual.rs  coverage.rs  epistemic_store.rs  event_log.rs  evolution.rs  hydra.rs  identity_link_store.rs  identity_store.rs  lib.rs  micromodel_store.rs  outcome_agent.rs  policy_agent.rs  policy_engine.rs  policy_store.rs  projection.rs  reflex.rs  registry.rs  remediation_agent.rs  replication_store.rs  schema_gate.rs  schema_registry_store.rs  schema_validator.rs  sensor_checkpoint_store.rs  snapshot_store.rs  temporal.rs  verification.rs  verification_agent.rs
crates/hydra-engine/src/micromodels/: action_failure_rate.rs  agent_loop_storm.rs  commit_rate.rs  mod.rs  reflex.rs  replication_lag.rs
crates/hydra-net/: Cargo.toml
crates/hydra-net/src/: bus.rs  lib.rs  metrics.rs  notify_delivery.rs  query.rs  replication_worker.rs  role.rs  runtime.rs  schema_admin_service.rs  schema_service.rs  sensor.rs
crates/hydra-net/src/http/: actions.rs  causal_cells.rs  commit_stream.rs  commits.rs  correlations.rs  diagnostics.rs  events.rs  identity.rs  ingest.rs  lineage.rs  micromodels.rs  mod.rs  observations.rs  pagination.rs  query.rs  replication.rs  schema.rs  sensor.rs  snapshots.rs  tenant.rs  trust.rs
crates/hydra-net/tests/: adversarial.rs
crates/hydra-sdk/: Cargo.toml
crates/hydra-sdk/src/: builder.rs  lib.rs  persistent.rs  schema.rs  schema_admin.rs  test_hydra.rs
crates/hydra-sensor/: Cargo.toml
crates/hydra-sensor/src/: cloudtrail.rs  cloudtrail_mapping.rs  lib.rs
crates/hydra-sentinel/: Cargo.toml
crates/hydra-sentinel/src/: lib.rs
crates/hydra-sentinel/src/arms/: classification_arm.rs  compliance_arm.rs  cost_arm.rs  discovery_arm.rs  execution_arm.rs  mod.rs  policy_arm.rs  response_arm.rs  threat_arm.rs  trust_arm.rs  verification_arm.rs
crates/hydra-sentinel/src/edges/: mod.rs
crates/hydra-sentinel/src/nodes/: aws.rs  azure.rs  compliance.rs  gcp.rs  mod.rs  protection.rs  resource.rs  threat.rs  trust.rs
crates/hydra-sentinel/src/queries/: anomaly_bridge.rs  blast_radius.rs  compliance_gaps.rs  confidence_report.rs  coverage_bridge.rs  mod.rs  protection_status.rs  recovery_plan.rs  temporal.rs
crates/hydra-sentinel/tests/: integration.rs
crates/hydra-storage/: Cargo.toml
crates/hydra-storage/src/: backend.rs  commit_log.rs  durability.rs  file.rs  lib.rs  memory.rs  recovery.rs  snapshot.rs
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: 01_ingest_and_lineage.py  02_belief_loop.py  03_schema_register_and_validate.py  04_replication_status.py
python-sdk/examples/agent_data_quality_watcher/: README.md  data_quality_watcher.py  data_quality_watcher_live.py  sample_incident.json
python-sdk/src/hydra/: __init__.py  _http.py  _paths.py  _types.py  client.py  client_sync.py  diagnostics.py  errors.py  replication.py  schemas.py
python-sdk/tests/: conftest.py  test_accept_semantic_match.py  test_action_approval.py  test_action_execution.py  test_action_failure_rate.py  test_agent_loop_storm.py  test_auto_approve.py  test_auto_execute.py  test_causal_cells.py  test_cell_trust.py  test_client.py  test_commit_rate_anomaly.py  test_compose_hydra_health.py  test_correlation_anchor.py  test_correlation_assess.py  test_correlation_discover.py  test_diagnostics.py  test_errors.py  test_http.py  test_identity.py  test_identity_link_trust.py  test_identity_links.py  test_identity_trust.py  test_ingest.py  test_lineage.py  test_micromodel_observation.py  test_paths.py  test_query.py  test_replication.py  test_replication_lag_anomaly.py  test_schemas.py  test_source_trust.py  test_subscribe_commits.py  test_sync_client.py  test_sync_http.py  test_sync_methods.py  test_trust.py  test_types.py
