[workspace]
resolver = "2"
members = [
    "crates/hydra-core",
    "crates/hydra-engine",
    "crates/hydra-storage",
    "crates/hydra-sdk",
    "crates/hydra-net",
    "crates/hydra-sentinel",
    "crates/hydra-sensor",
    "crates/hydra-api",
    "crates/hydra-cli",
    "crates/hydra-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
