[package]
name = "hydra-api"
description = "HTTP API layer + CloudTrail transport for Hydra Sentinel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hydra-core = { path = "../hydra-core" }
hydra-engine = { path = "../hydra-engine" }
hydra-sentinel = { path = "../hydra-sentinel" }
hydra-sensor = { path = "../hydra-sensor" }
hydra-net = { path = "../hydra-net" }
hydra-sdk = { path = "../hydra-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tower_governor = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hydra-storage = { path = "../hydra-storage" }
