[package]
name = "hydra-api"
description = "HTTP API layer + CloudTrail transport for Hydra Sentinel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hydra-core = { path = "../hydra-core" }
hydra-engine = { path = "../hydra-engine" }
hydra-sentinel = { path = "../hydra-sentinel" }
hydra-sensor = { path = "../hydra-sensor" }
hydra-net = { path = "../hydra-net" }
hydra-sdk = { path = "../hydra-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
# V2 patch 4I — CancellationToken for the auto-spawned replication
# worker's lifecycle. Same dep hydra-net pulls; here we use it from
# the server side to coordinate graceful shutdown.
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tower_governor = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hydra-storage = { path = "../hydra-storage" }
rcgen = "0.13"
# rustls 0.23 with multiple crypto providers reachable (ring via rcgen,
# aws-lc-rs via rustls default features pulled through reqwest's chain)
# refuses to auto-pick at runtime. The TLS test calls
# `CryptoProvider::install_default(ring::default_provider())` once to
# pin the provider deterministically. Brought in only as a dev-dep so
# production binaries aren't locked to a specific provider — operators
# can swap by installing a different one before serve.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
