[package]
name = "hydra-bench"
description = "Criterion baseline benchmarks for the Hydra engine + storage hot paths"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hydra-core = { path = "../hydra-core" }
hydra-engine = { path = "../hydra-engine" }
hydra-storage = { path = "../hydra-storage" }
hydra-sdk = { path = "../hydra-sdk" }
chrono = { workspace = true }

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "storage"
harness = false
