[package]
name = "hydra-core"
description = "Foundation types for Hydra — events, nodes, edges, graph traits, queries"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

