[package]
name = "hydra-net"
description = "Async runtime, sensor trait, event bus, and HTTP API for Hydra"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hydra-core = { path = "../hydra-core" }
hydra-engine = { path = "../hydra-engine" }
hydra-storage = { path = "../hydra-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = "0.7"
# V2 patch 4A — follower puller HTTP client. `default-features = false`
# drops the openssl pull-in. `rustls-tls-no-provider` brings rustls
# without auto-picking a crypto provider, so the puller can install
# `ring` explicitly via `CryptoProvider::install_default` in a
# `Once`-guarded init. rustls 0.23 panics at runtime if more than one
# provider is reachable; multiple are in the workspace (ring via rcgen
# and aws-lc-rs via rustls default features), so explicit selection
# is the only safe approach.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-no-provider"] }
# Used by the puller's `ensure_crypto_provider_installed`. Operators
# who prefer a different provider can install it before constructing
# `ReplicationPuller`; the puller's `Once` only fires if no provider
# is already installed.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
# V2 patch 4D — `CancellationToken` for `run_until_cancelled`.
# Default features include `sync::CancellationToken`; no extra
# feature flags needed for the loop driver. `select!` waits on the
# token alongside the poll-interval sleep.
tokio-util = "0.7"
# V2 polish — file locking on the replication cursor/heartbeat
# sentinel files (`<data>.json.lock`). Defense against two pullers
# pointing at the same paths racing on read-modify-write + atomic
# rename. fs2 wraps `flock` on Unix and `LockFileEx` on Windows.
fs2 = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
