[package]
name = "hydra-sdk"
description = "Ergonomic API for building on Hydra — HydraBuilder, HydraRuntime, TestHydra"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hydra-core = { path = "../hydra-core" }
hydra-engine = { path = "../hydra-engine" }
hydra-storage = { path = "../hydra-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
